--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,19 @@ main {
     bottom: 55%;
     left: 50%;
     transform: translate(-63%, 20%);
+    height: 18%;
+}
+
+.pokemon_data {
+    position: absolute;
+    font-weight: 600;
+    color: #aaa;
+    top: 54.5%;
+    right: 27%;
+    font-size: clamp(8px, 5vw, 25px);
+}
+
+.pokemon_name {
+    color: #3a444d;
+    text-transform: capitalize;
 }
