--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,26 @@ main {
     font-size: clamp(8px, 5vw, 1rem);
     box-shadow: -3px 4px 0 #888, -5px 7px 0 #888
 }
+
+.buttons {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    width: 65%;
+    transform: translate(-57%, 0);
+    display: flex;
+    gap: 20px;
+}
+
+.button {
+    width: 50%;
+    padding: 4%;
+    border: 2px solid #000;
+    border-radius: clamp(5px, 5vw, 1rem);
+    font-weight: 600;
+    color: white;
+    background-color: #444d;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #222;
+
+
+}
