--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,14 @@ main {
     padding: 4%;
     border: 2px solid #000;
     border-radius: clamp(5px, 5vw, 1rem);
+    font-size: clamp(5px, 5vw, 1rem);
     font-weight: 600;
     color: white;
     background-color: #444d;
     box-shadow: -2px 3px 0 #222, -4px 6px 0 #222;
+}
 
-
+.button:active {
+    box-shadow: inset -4px 4px #222;
+    font-size: 0.9rem;
 }
